fix(topic landing): stretch featured topic image

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -5019,7 +5019,7 @@ h1.topic-landing-header {
   flex-direction: column;
 }
 .singlePanel .featuredTopicImgWrapper .imageWithCaptionPhoto{
-  max-width: calc(80.67vw);
+  max-width: calc(100vw);
 }
 .featuredTopicContent {
   display: flex;
